Native/Vulkan Loader: Remove llvm-mingw archive after extraction.

--- a/.github/workflows/vulkan-loader.yml
+++ b/.github/workflows/vulkan-loader.yml
@@ -50,6 +50,7 @@ jobs:
               wget https://github.com/mstorsjo/llvm-mingw/releases/download/20240417/llvm-mingw-20240417-msvcrt-ubuntu-20.04-x86_64.tar.xz
               sudo mkdir /opt/llvm-mingw-msvcrt
               sudo tar xf llvm-mingw-20240417-msvcrt-ubuntu-20.04-x86_64.tar.xz --strip-components 1 -C /opt/llvm-mingw-msvcrt
+              rm llvm-mingw-20240417-msvcrt-ubuntu-20.04-x86_64.tar.xz
           - os: windows-2022
             name: Windows
             nuke_invoke: ./build.cmd
