Native/Vkd3d: Use x86_64-w64-mingw32-widl as IDL compiler.
Should avoid having to install all of Wine.

--- a/.github/workflows/vkd3d.yml
+++ b/.github/workflows/vkd3d.yml
@@ -47,7 +47,7 @@ jobs:
               sudo apt update
               sudo apt install -y gcc-aarch64-linux-gnu gcc-arm-linux-gnueabihf
               sudo apt install -y g++-aarch64-linux-gnu g++-arm-linux-gnueabihf
-              sudo apt install -y wine64-development-tools
+              sudo apt install -y mingw-w64-tools
     name: ${{ matrix.env.name }} Build
     runs-on: ${{ matrix.env.os }}
     steps:
