Revert "Native/Vkd3d: Fix source repository URL to match submodule."
This reverts commit d5949f087c3898d0ad8253fcc0b1fd9ea62148b1.

--- a/src/Native/Silk.NET.Vkd3d.Native/Silk.NET.Vkd3d.Native.csproj
+++ b/src/Native/Silk.NET.Vkd3d.Native/Silk.NET.Vkd3d.Native.csproj
@@ -12,7 +12,7 @@
         <PackageProjectUrl>https://github.com/dotnet/Silk.NET</PackageProjectUrl>
         <Description>Native library for Vkd3d.</Description>
         <RepositoryType>git</RepositoryType>
-        <RepositoryUrl>https://github.com/Beyley/vkd3d</RepositoryUrl>
+        <RepositoryUrl>https://gitlab.winehq.org/wine/vkd3d</RepositoryUrl>
     </PropertyGroup>
 
 </Project>
