Support SupportedApiProfileAttribute generation with metadata

--- a/sources/SilkTouch/Silk.NET.SilkTouch.csproj
+++ b/sources/SilkTouch/Silk.NET.SilkTouch.csproj
@@ -30,4 +30,8 @@
     <EmbeddedResource Include="Clang\VisualStudioVarPrint.bat" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Core\Silk.NET.Core.csproj" />
+  </ItemGroup>
+
 </Project>
