Move global using to csproj

--- a/src/Assimp/Silk.NET.Assimp.Tests/Silk.NET.Assimp.Tests.csproj
+++ b/src/Assimp/Silk.NET.Assimp.Tests/Silk.NET.Assimp.Tests.csproj
@@ -33,6 +33,7 @@
       <None Remove="Model.zip" />
       <EmbeddedResource Include="Model.zip" />
       <Content Include="../../Native/Silk.NET.Assimp.Native/runtimes/$(RuntimeIdentifier)/native/*" CopyToPublishDirectory="PreserveNewest" CopyToOutputDirectory="PreserveNewest" />
+      <Using Include="Xunit" />
     </ItemGroup>
 
 </Project>
