--- a/.github/workflows/sdl2.yml
+++ b/.github/workflows/sdl2.yml
@@ -61,13 +61,12 @@ jobs:
         if: runner.os == 'Windows'
         id: set_path
         run: |
-          echo "cur_path=$env:PATH\n" >> $GITHUB_OUTPUT
-          echo "usr_path=$env:USERPROFILE\n" >> $GITHUB_OUTPUT
+          echo "cur_path=$env:PATH\n" >> $env:GITHUB_OUTPUT
       - name: Setup Android Environment
         uses: android-actions/setup-android@v3
         if: runner.os == 'Windows'
         env:
-          PATH: "${{ steps.set_path.outputs.usr_path}}\\.dotnet\\tools;${{ steps.set_path.outputs.cur_path }}"
+          PATH: "${{ env.DOTNET_ROOT }};${{ env.DOTNET_ROOT }}\\tools;${{ steps.set_path.outputs.cur_path }}"
       - name: Install Android Platforms
         if: runner.os == 'Windows'
         run: |
