--- a/.github/workflows/sdl2.yml
+++ b/.github/workflows/sdl2.yml
@@ -11,6 +11,7 @@ on:
       - build/nuke/Native/Core.cs
       - build/nuke/Native/SDL2.cs
       - build/nuke/Native/SilkDroid.cs
+      - build/nuke/Build.Support.cs
       - .github/workflows/sdl2.yml
 jobs:
   Build:
