--- a/.github/workflows/sdl2.yml
+++ b/.github/workflows/sdl2.yml
@@ -23,7 +23,7 @@ jobs:
           - os: ubuntu-22.04
             name: Linux
             nuke_invoke: ./build.sh
-          - os: windows-2022
+          - os: windows-latest  # runner is not setup for android yet
             name: Windows
             nuke_invoke: ./build.cmd BuildLibSilkDroid
           - os: macos-14
@@ -53,11 +53,11 @@ jobs:
         continue-on-error: true
         if: runner.os == 'Windows'
         run: dotnet tool install --global PowerShell
-      - name: Setup Java JDK 21
+      - name: Setup Java JDK 11
         uses: actions/setup-java@v2.3.0
         if: runner.os == 'Windows'
         with:
-          java-version: 21
+          java-version: 11
           distribution: "temurin"
       - name: Set PATH
         if: runner.os == 'Windows'
