--- a/tests/Directory.Build.props
+++ b/tests/Directory.Build.props
@@ -13,7 +13,7 @@
   <PropertyGroup>
     <MSBuildAllProjects>$(MSBuildAllProjects);$(MSBuildThisFileDirectory)..\Directory.Build.props</MSBuildAllProjects>
     <ProjectCategory>tests</ProjectCategory>
-    <NoWarn>1591</NoWarn>
+    <NoWarn>1591;1574;1584;1581;1580</NoWarn>
   </PropertyGroup>
 
   <Import Project="$(MSBuildThisFileDirectory)..\Directory.Build.props" />
