--- a/tests/SDL/Silk.NET.SDL.UnitTests.csproj
+++ b/tests/SDL/Silk.NET.SDL.UnitTests.csproj
@@ -10,9 +10,9 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.9.0" />
+        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.10.0" />
         <PackageReference Include="NUnit3TestAdapter" Version="4.2.1" />
-        <PackageReference Include="NUnit.Analyzers" Version="4.1.0">
+        <PackageReference Include="NUnit.Analyzers" Version="4.2.0">
           <PrivateAssets>all</PrivateAssets>
           <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
@@ -21,7 +21,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\..\sources\Core\Silk.NET.Core.csproj" />
+      <ProjectReference Include="..\..\sources\SDL\Silk.NET.SDL.csproj" />
     </ItemGroup>
 
     <ItemGroup>
