easy command line building system 2

--- a/website/tsconfig.json
+++ b/website/tsconfig.json
@@ -1,3 +1,4 @@
+// Errors here should be ignored (i know, it's very annoying)
 {
   // This file is not used in compilation. It is here just for a nice editor experience.
   "extends": "@tsconfig/docusaurus/tsconfig.json",
