--- a/.github/workflows/publish-site.yml
+++ b/.github/workflows/publish-site.yml
@@ -15,7 +15,7 @@ env:
   NODE_OPTIONS: --max-old-space-size=6144
 
 jobs:
-  deploy:
+  setup:
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
@@ -35,10 +35,17 @@ jobs:
         working-directory: ./website
         run: yarn install --frozen-lockfile --non-interactive
 
+  build:
+    runs-on: ubuntu-latest
+    steps:
       - name: Build
         working-directory: ./website
         run: yarn build
+    needs: setup
 
+  deploy:
+    runs-on: ubuntu-latest
+    steps:
       - name: Setup Pages
         uses: actions/configure-pages@v3
 
@@ -46,3 +53,4 @@ jobs:
         uses: actions/upload-pages-artifact@v2
         with:
           path: build
+    needs: build
