--- a/.github/workflows/publish-site.yml
+++ b/.github/workflows/publish-site.yml
@@ -29,18 +29,18 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: 16.x
-          cache: yarn
+          cache: npm
 
       - name: Install dependencies
         working-directory: ./website
-        run: yarn install --frozen-lockfile --non-interactive
+        run: npm install --frozen-lockfile --non-interactive
 
   build:
     runs-on: ubuntu-latest
     steps:
       - name: Build
         working-directory: ./website
-        run: yarn build
+        run: npm run docusaurus build
     needs: setup
 
   deploy:
