changes on publish site workflow 6

--- a/.github/workflows/publish-site.yml
+++ b/.github/workflows/publish-site.yml
@@ -25,6 +25,14 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
+  build:
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+
+    runs-on: ubuntu-latest
+
+    steps:
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
@@ -35,11 +43,8 @@ jobs:
         working-directory: ./website
         run: npm install --frozen-lockfile --non-interactive
 
-  build:
-    runs-on: ubuntu-latest
-    steps:
       - name: Build
-        working-directory: website/
+        working-directory: ./website
         run: npm run docusaurus build
     needs: setup
 
