changes on publish site workflow 8

--- a/.github/workflows/publish-site.yml
+++ b/.github/workflows/publish-site.yml
@@ -45,4 +45,4 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v2
         with:
-          path: build
+          path: website/build
