changes on publish site workflow 9

--- a/.github/workflows/publish-site.yml
+++ b/.github/workflows/publish-site.yml
@@ -15,7 +15,7 @@ env:
   NODE_OPTIONS: --max-old-space-size=6144
 
 jobs:
-  setup:
+  build:
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
@@ -46,3 +46,14 @@ jobs:
         uses: actions/upload-pages-artifact@v2
         with:
           path: website/build
+    
+  deploy:
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v1
