WIP Windowing 3.0 for real this time

--- a/sources/Core/Analyzers/Silk.NET.Core.Analyzers.csproj
+++ b/sources/Core/Analyzers/Silk.NET.Core.Analyzers.csproj
@@ -14,5 +14,10 @@
 
         <!-- Package the generator in the analyzer directory of the nuget package -->
         <None Include="$(OutputPath)\$(AssemblyName).dll" Pack="true" PackagePath="analyzers/dotnet/cs" Visible="false" />
+        <EmbeddedResource Include="*Attribute.cs" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Content Include="Properties\launchsettings.json" />
     </ItemGroup>
 </Project>
