--- a/sources/Windowing/Windowing/Silk.NET.Windowing.csproj
+++ b/sources/Windowing/Windowing/Silk.NET.Windowing.csproj
@@ -15,5 +15,6 @@
   <ItemGroup>
     <ProjectReference Include="..\..\Core\Analyzers\Silk.NET.Core.Analyzers.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false" />
   </ItemGroup>
+  <Import Project="..\..\Core\Core\Silk.NET.Core.targets" />
 
 </Project>
