--- a/sources/Windowing/Common/Silk.NET.Windowing.Common.csproj
+++ b/sources/Windowing/Common/Silk.NET.Windowing.Common.csproj
@@ -16,4 +16,8 @@
       <ProjectReference Include="..\..\Core\Analyzers\Silk.NET.Core.Analyzers.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Content Include="Hosting\README.md" />
+    </ItemGroup>
+
 </Project>
