--- a/.github/workflows/angle.yml
+++ b/.github/workflows/angle.yml
@@ -1,4 +1,4 @@
-name: MoltenVK
+name: ANGLE
 on:
     push:
         branches-ignore:
@@ -10,6 +10,7 @@ on:
             - build/nuke/Native/Core.cs
             - build/nuke/Native/Angle.cs
             - .github/workflows/angle.yml
+    workflow_dispatch:
 jobs:
     Build:
         if: github.repository == 'dotnet/Silk.NET'
