--- a/.github/workflows/sdl2.yml
+++ b/.github/workflows/sdl2.yml
@@ -45,10 +45,11 @@ jobs:
         uses: actions/setup-dotnet@v3
         if: runner.os == 'Windows'
         with:
-          dotnet-version: 6.0.x
+          dotnet-version: |
+            6.0.201
+            7.0.*
         env:
           DOTNET_INSTALL_DIR: ~/.dotnet
-
       - name: Setup PowerShell Core
         continue-on-error: true
         if: runner.os == 'Windows'
