--- a/.github/workflows/sdl2.yml
+++ b/.github/workflows/sdl2.yml
@@ -147,6 +147,10 @@ jobs:
         env:
           PUSHABLE_GITHUB_TOKEN: ${{ secrets.PUSHABLE_GITHUB_TOKEN }}
 
+      - name: Install Workloads
+        if: runner.os == 'Windows'
+        run: dotnet workload install android ios
+
       - name: Build SDL2
         if: runner.os != 'Linux'
         run: ${{ matrix.env.nuke_invoke }} SDL2 ${{ runner.os == 'Windows' && format('{0} {1}', '--native true --android-home-value', env.ANDROID_HOME) || '' }} 
