--- a/.github/workflows/sdl2.yml
+++ b/.github/workflows/sdl2.yml
@@ -149,7 +149,7 @@ jobs:
 
       - name: Install Workloads
         if: runner.os == 'Windows'
-        run: dotnet workload install android ios
+        run: dotnet workload install android ios maccatalyst
 
       - name: Build SDL2
         if: runner.os != 'Linux'
