--- a/.github/workflows/sdl2.yml
+++ b/.github/workflows/sdl2.yml
@@ -48,6 +48,7 @@ jobs:
           dotnet-version: |
             6.0.201
             7.0.*
+            8.0.*
         env:
           DOTNET_INSTALL_DIR: ~/.dotnet
       - name: Setup PowerShell Core
@@ -73,12 +74,13 @@ jobs:
       - name: Install Android Platforms
         if: runner.os == 'Windows'
         run: |
-          sdkmanager --install "build-tools;32.0.0"
+          sdkmanager --install "build-tools;30.0.2"
           sdkmanager --install "platform-tools"
           sdkmanager --install "platforms;android-31"
           sdkmanager --install "platforms;android-33"
           sdkmanager --install "platforms;android-34"
           sdkmanager --install "ndk-bundle"
+          sdkmanager --install "ndk;21.4.7075529"
       - name: Setup Java JDK 11
         uses: actions/setup-java@v2.3.0
         if: runner.os == 'Windows'
