Fix SDL2 linux build error, update some runner images

--- a/.github/workflows/vulkan-loader.yml
+++ b/.github/workflows/vulkan-loader.yml
@@ -18,26 +18,26 @@ jobs:
       fail-fast: false
       matrix:
         env:
-          - os: ubuntu-22.04
+          - os: ubuntu-24.04
             name: Linux
             nuke_invoke: ./build.sh
             extras: |
               # We need to adjust APT sources for multiarch. Use the ones corresponding to
-              # Ubuntu 22.04 with appropriate `arch` values. ports.ubuntu.com is required
+              # Ubuntu 24.04 with appropriate `arch` values. ports.ubuntu.com is required
               # for armhf and arm64.
               sudo tee /etc/apt/sources.list << EOF
-              deb [arch=amd64] http://archive.ubuntu.com/ubuntu jammy main multiverse restricted universe
-              deb [arch=amd64] http://archive.ubuntu.com/ubuntu jammy-backports main multiverse restricted universe
-              deb [arch=amd64] http://archive.ubuntu.com/ubuntu jammy-security main multiverse restricted universe
-              deb [arch=amd64] http://archive.ubuntu.com/ubuntu jammy-updates main multiverse restricted universe
-              deb [arch=arm64,armhf] http://ports.ubuntu.com jammy main multiverse restricted universe
-              deb [arch=arm64,armhf] http://ports.ubuntu.com jammy-backports main multiverse restricted universe
-              deb [arch=arm64,armhf] http://ports.ubuntu.com jammy-security main multiverse restricted universe
-              deb [arch=arm64,armhf] http://ports.ubuntu.com jammy-updates main multiverse restricted universe
-              deb [arch=amd64] http://security.ubuntu.com/ubuntu jammy main multiverse restricted universe
-              deb [arch=amd64] http://security.ubuntu.com/ubuntu jammy-backports main multiverse restricted universe
-              deb [arch=amd64] http://security.ubuntu.com/ubuntu jammy-security main multiverse restricted universe
-              deb [arch=amd64] http://security.ubuntu.com/ubuntu jammy-updates main multiverse restricted universe
+              deb [arch=amd64] http://archive.ubuntu.com/ubuntu noble main multiverse restricted universe
+              deb [arch=amd64] http://archive.ubuntu.com/ubuntu noble-backports main multiverse restricted universe
+              deb [arch=amd64] http://archive.ubuntu.com/ubuntu noble-security main multiverse restricted universe
+              deb [arch=amd64] http://archive.ubuntu.com/ubuntu noble-updates main multiverse restricted universe
+              deb [arch=arm64,armhf] http://ports.ubuntu.com noble main multiverse restricted universe
+              deb [arch=arm64,armhf] http://ports.ubuntu.com noble-backports main multiverse restricted universe
+              deb [arch=arm64,armhf] http://ports.ubuntu.com noble-security main multiverse restricted universe
+              deb [arch=arm64,armhf] http://ports.ubuntu.com noble-updates main multiverse restricted universe
+              deb [arch=amd64] http://security.ubuntu.com/ubuntu noble main multiverse restricted universe
+              deb [arch=amd64] http://security.ubuntu.com/ubuntu noble-backports main multiverse restricted universe
+              deb [arch=amd64] http://security.ubuntu.com/ubuntu noble-security main multiverse restricted universe
+              deb [arch=amd64] http://security.ubuntu.com/ubuntu noble-updates main multiverse restricted universe
               EOF
               sudo dpkg --add-architecture arm64
               sudo dpkg --add-architecture armhf
@@ -46,10 +46,10 @@ jobs:
               for arch in amd64 arm64 armhf; do
                 sudo apt install -y libx11-xcb-dev:$arch libxkbcommon-dev:$arch libwayland-dev:$arch libxrandr-dev:$arch
               done
-              wget https://github.com/mstorsjo/llvm-mingw/releases/download/20240417/llvm-mingw-20240417-msvcrt-ubuntu-20.04-x86_64.tar.xz
+              wget https://github.com/mstorsjo/llvm-mingw/releases/download/20241015/llvm-mingw-20241015-msvcrt-ubuntu-20.04-x86_64.tar.xz
               sudo mkdir /opt/llvm-mingw-msvcrt
-              sudo tar xf llvm-mingw-20240417-msvcrt-ubuntu-20.04-x86_64.tar.xz --strip-components 1 -C /opt/llvm-mingw-msvcrt
-              rm llvm-mingw-20240417-msvcrt-ubuntu-20.04-x86_64.tar.xz
+              sudo tar xf llvm-mingw-20241015-msvcrt-ubuntu-20.04-x86_64.tar.xz --strip-components 1 -C /opt/llvm-mingw-msvcrt
+              rm llvm-mingw-20241015-msvcrt-ubuntu-20.04-x86_64.tar.xz
           - os: windows-2022
             name: Windows
             nuke_invoke: ./build.cmd
